# dice_box

./: CHANGELOG  README.md  bandit.yaml  install.py  pyproject.toml  uninstall.py
src/dice_box/: app.py  dice_roller.py  yaml_file_handler.py
src/dice_box/resources/: PYPI_README.md
src/dice_box/resources/configs/: config.yaml
